tests/vendor/invalid/semantics/goto_missing_label.c
//tags: simple, goto
int main() {
    goto label;
    return 0;
}